--- a/content/support/donate.html
+++ b/content/support/donate.html
@@ -2,38 +2,24 @@
 title: Donate to FOSDEM
 navtitle: Donate
 ---
-<p>FOSDEM is an event organized for the community by the community. As such, we
-think it is important to keep access to the event free.</p>
+<p>
+  While FOSDEM is primarily funded by sponsors and the sale of t-shirts onsite,
+  we also gratefully accept voluntary donations.
+</p>
 
-<p>The event is organized by volunteers who don't get paid and don't have
-commercial interests in the event. As one might imagine, however, the
-organization costs a lot of money and other resources.</p>
+<p>
+  Please note donations are not tax-deductible. Refunds are not possible.
+</p>
 
-<p>The main characteristic of FOSDEM is that it is a non-commercial event. To keep
-it that way, we think the best way to fund the event is to ask for support from
-the open source community on a voluntary basis.</p>
+<h2>How?</h2>
+<p>
+  We accept donations by wire transfer only.
 
-<h2>Donors Return</h2>
-<p>We're asking you to support the event by making a voluntary donation to make
-FOSDEM happen.</p>
+  <ul>
+    <li><b>IBAN:</b> BE50 0016 8930 5318</li>
+    <li><b>BIC:</b> GEBABEBB</li>
+  </ul>
 
-<p>Some gifts are given for donations depending on the amount of money, to each
-donor:</p>
-<ul>
-    <li>€ 25 or more: a FOSDEM T-shirt! (different sizes available)</li>
-    <li>€ 50 – € 99: a FOSDEM T-shirt + an O'Reilly pocket guide of your choice</li>
-    <li>€ 100 or more: : a FOSDEM T-shirt + an O'Reilly book of your choice</li>
-</ul>
-
-<p>FOSDEM ASBL/VZW (the non-profit association) was founded in April 2002.<br/>  
-Donations are not tax deductible.</p>
-
-<h2>How ?</h2>
-<p>So, how can I contribute to FOSDEM ?</p>
-<p>By making a donation at the Infodesk during the conference.</p>
-
-<p>To avoid any problems or misunderstandings in the future, read the following
-<em>VERY CAREFULLY</em>: you don't buy these items from FOSDEM — we give them
-to you to thank you for your support. We can't guarantee anything. In case of
-problems (whatever they may be), we can't give you your money back.</p>
-
+  We can send you a receipt if you need one. Send us an email at
+  <a href="mailto:info@fosdem.org">info@fosdem.org</a>.
+</p>
