donate: add warning about t-shirts

--- a/content/support/donate.html
+++ b/content/support/donate.html
@@ -3,12 +3,13 @@ title: Donate to FOSDEM
 navtitle: Donate
 ---
 <p>
-  While FOSDEM is primarily funded by sponsors and the sale of t-shirts onsite,
+  While FOSDEM is primarily funded by sponsors and the sale of t-shirts on-site,
   we also gratefully accept voluntary donations.
 </p>
 
 <p>
-  Please note donations are not tax-deductible. Refunds are not possible.
+  Please note donations are not tax-deductible. Refunds are not possible. Only
+  donations made on-site are rewarded with a t-shirt.
 </p>
 
 <h2>How?</h2>
