Added "N" and "E" to coordinates

--- a/content/practical/transportation.html
+++ b/content/practical/transportation.html
@@ -36,9 +36,9 @@ sponsors_under_navigation: true
 
 <dl class="dl-horizontal geo">
   <dt>Latitude:</dt>
-  <dd class="latitude">50.812375</dd>
+  <dd class="latitude">N50.812375</dd>
   <dt>Longitude:</dt>
-  <dd class="longitude">4.380734</dd>
+  <dd class="longitude">E4.380734</dd>
 </dl>
 
 <hr/>
