My GnuPG generates .sig files (not .asc)

--- a/content/keysigning.html
+++ b/content/keysigning.html
@@ -100,7 +100,7 @@ gpg --keyserver ksp.fosdem.org --send-key [keyid]
   list's detached signature using:
 </p>
 <pre class="sh">
-gpg --verify ksp-<%= klist %>.txt.asc ksp-<%= klist %>.txt
+gpg --verify ksp-<%= klist %>.txt.sig ksp-<%= klist %>.txt
 </pre>
 
 <p>
@@ -137,7 +137,7 @@ gpg --verify ksp-<%= klist %>.txt.asc ksp-<%= klist %>.txt
   file's detached signature using:
 </p>
 <pre class="sh">
-gpg --verify ksp-<%= klist %>-hashes.txt.asc ksp-<%= klist %>-hashes.txt
+gpg --verify ksp-<%= klist %>-hashes.txt.sig ksp-<%= klist %>-hashes.txt
 </pre>
 
 <p>
