--- a/content/schedule/mobile.html
+++ b/content/schedule/mobile.html
@@ -43,6 +43,12 @@ UNFINISHED!! -->
     Available from the <a href="https://play.google.com/store/apps/details?id=net.gaast.giggity">android market</a>,<br />
     Available from F-droid market, also has direct <a href="http://f-droid.org/repository/browse/?fdfilter=fosdem&fdid=net.gaast.giggity">apk download</a>.<br />
 </li>
+<li><b>N900: Sojourner</b><br />
+    <a href="http://fosdem.loomchild.net/sojourner_0.2.8_all.deb">deb package for 2014</a> (with fixup for https),<br />
+    <a href="http://willthompson.co.uk/sojourner/">Website</a>,<br />
+    <a href="http://gitorious.org/sojourner/">Original source code</a>,<br />
+    <a href="http://git.altlinux.org/people/thresh/public/sojourner.git">Clone for 2012.</a>
+</li>
 </ul>
 
 <p>
@@ -65,11 +71,6 @@ Others? Or tested one of the below for this year? Let us know on our public mail
 
 <h3>Apps for Mobile Devices, archive from 2012 and before</h3>
 <ul>
-<li><b>N900: Sojourner</b><br />
-    <a href="http://willthompson.co.uk/sojourner/">Website</a>,<br />
-    <a href="http://gitorious.org/sojourner/">Original source code</a>,<br />
-    <a href="http://git.altlinux.org/people/thresh/public/sojourner.git">Clone for 2012.</a>
-</li>
 <li><b>N9/N950: rzr fosdem-schedule</b><br />
     <a href="http://www.who.is.free.fr/wiki/doku.php?id=be#">Website (scroll a bit down for installation instructions)</a>,<br />
     <a href="https://build.pub.meego.com/package/show?package=fosdem-schedule&project=home%3Arzr%3Aharmattan">Source code</a>.<br />
