Used UK spelling for 'organiser'

--- a/content/keysigning.html
+++ b/content/keysigning.html
@@ -124,7 +124,7 @@ The hashes:              ☐
 </pre>
 
 <p>
-  To avoid descending into chaos, the organizer will line up the participants
+  To avoid descending into chaos, the organiser will line up the participants
   in the order of the list.
 </p>
 <pre class="sh">
