Added missing step in Keysigning procedure

--- a/content/keysigning.html
+++ b/content/keysigning.html
@@ -144,6 +144,10 @@ The hashes:              ☐
   their list (modulo no-shows).
 </p>
 <pre class="sh">
+      2 - 3 - 4 - 5
+  1 - 8 - 7 - 6
+</pre>
+<pre class="sh">
   2 - 3 - 4 - 5
   1 - 8 - 7 - 6
 </pre>
