content: fix some awkward capitalisation

--- a/content/practical/index.html
+++ b/content/practical/index.html
@@ -1,8 +1,8 @@
 ---
-title: Practical Information
+title: Practical information
 navcat: true
 ---
-<h3>Before the Event</h3>
+<h3>Before the event</h3>
 <ul>
     <li><%= l('/practical/accommodation/') %></li>
     <li><%= l('/practical/transportation/') %></li>
