accommodation: update FunKey offer

--- a/content/practical/accommodation.html
+++ b/content/practical/accommodation.html
@@ -26,69 +26,7 @@ places to stay.</p>
 </p>
 
 <p>
-  Their offer includes the following:
-
-  <ul>
-    <li>28 Euro per bed, per night</li>
-    <li>Breakfast</li>
-    <li>Wireless network</li>
-    <li>24/7 snacking and beverages (including an extensive selection of Belgian special beers)</li>
-    <li>Free parking</li>
-    <li>The use of their Chromebook laptops</li>
-    <li>The use of their mobile phones (with unlimited calls in Belgium)</li>
-  </ul>
-</p>
-
-<p>
-  They have the following fully equipped rooms available:
-
-  <ul>
-    <li>2-bed rooms</li>
-    <li>3-bed rooms</li>
-    <li>4-bed rooms</li>
-  </ul>
-</p>
-
-<p>
-  Please notice that roughly one third of the rooms have already been booked,
-  so if you are interested you should book as early as possible.
-</p>
-
-<p>
-  The offer of 28EUR/bed/night is valid for Friday, Saturday and Sunday night.
-</p>
-
-<p>
-  Please try to book as groups of 2, 3, or 4 friends or colleagues. It is
-  also possible to book just one bed and share a room with people you
-  don't know.
-</p>
-
-<p>
-  If you are interested, all you have to do is send an e-mail to Guillaume
-  at <a href="mailto:guillaume@funkeyhotel.com">guillaume@funkeyhotel.com</a>,
-  indicating:
-
-  <ul>
-    <li>Your name(s)</li>
-    <li>How many beds you wish to book</li>
-    <li>The nights you wish to book</li>
-  </ul>
-</p>
-
-<p>
-  People wishing to book at least 2 nights have priority until 2014-10-01.
-  This means that 1 night only bookings will only be confirmed after this
-  date. Bookings for at least 2 nights can be paid immediately and will
-  be instantly confirmed.
-</p>
-
-<p>
-  Payment must be made in advance and is nonrefundable. Guillaume will
-  send you details on how to proceed after you have e-mailed him. You will
-  have the possibility of paying either online with Visa, MasterCard or
-  Bancontact (no American Express, Carte Bleue, Visa Electron or others)
-  or by IBAN.
+  <b>Update 20141013: all rooms have been booked.</b>
 </p>
 
 <p>
