markup: make valid XHTML 1.0 Transitional

--- a/content/about/sponsors.html
+++ b/content/about/sponsors.html
@@ -38,7 +38,7 @@ sponsors_root: true
 
 <% [
     { title: 'Cornerstone sponsor', plural: true,  alpha: true,  id: 'cornerstone', section: '',       selector: lambda{|s| s.cornerstone?} },
-    { title: 'Main sponsor',        plural: true,  alpha: true,  id: 'main',        section: '',       selector: lambda{|s| not s.cornerstone?} },
+    { title: 'Main sponsor',        plural: true,  alpha: true,  id: 'main-sponsor',section: '',       selector: lambda{|s| not s.cornerstone?} },
     { title: 'Thanks',              plural: false, alpha: false, id: 'thanks',      section: 'thanks', selector: lambda{|s| true} },
 ].each_with_index do |section, index|
 %>
@@ -54,7 +54,7 @@ sponsors_root: true
 <div class="s-unit<% if (i+1) == list.size %> s-unit-last<% end %>">
 <% if s.logo? %>
 <% if s.url? %><a href="<%= s.url %>" title="<%= s.name %> website"><% end %>
-<%= img s.logo, {class: "s-logo"} %>
+<%= img s.logo, {class: "s-logo", alt: s.name} %>
 <% if s.url? %></a><% end %>
 <% end %>
 <%= s.propaganda %>
