--- a/content/keysigning.html
+++ b/content/keysigning.html
@@ -47,8 +47,8 @@ gpg --keyserver ksp.fosdem.org --send-key [keyid]
 </pre>
 
 <p>
-  If you have multiple keys, try to submit them together. Since the list is
-  sorted by submission time, this will group your keys on the list, saving
+  If you have multiple keys, try to (re)submit them together. Since the list is
+  sorted by (re)submission time, this will group your keys on the list, saving
   everyone a lot of browsing forward and backward through the list.
 </p>
 
