index: note most deadlines have passed

--- a/content/index.html
+++ b/content/index.html
@@ -47,12 +47,12 @@ maxnews = @config.fetch(:news).fetch(:items_on_index_page).to_i
         and Sunday 1 February 2015.
       </p>
       <p>
-        We are inviting proposals for:
-      <ul>
-        <li><a href="<%= pathof '/news/2014-09-19-call-for-participation-part-two/' %>">Lightning talks and stands</a></li>
-        <li><a href="<%= pathof '/news/2014-09-30-accepted-devrooms/' %>">Presentations in developer rooms</a></li>
-      </ul>
-      The deadline for main track proposals has passed.
+        We are still inviting proposals for
+	<a href="<%= pathof '/news/2014-09-30-accepted-devrooms/' %>">presentations in developer rooms</a>.
+      </p>
+      <p>
+      The deadlines for other proposals have passed.<br/>
+      Schedules will be announced in the coming days and weeks.
       </p>
     </div>
   </div>
