certification: fix website build

--- a/content/certification.html
+++ b/content/certification.html
@@ -206,6 +206,6 @@ certs = events.select{|e| e[:type] == 'certification'}.sort_by{|e| e[:start_date
 </p>
 
 <h3>About The Document Foundation</h3>
-<% tdf = speaker 'the_document_foundation' %>
+<% tdf = speaker 'libreoffice_team' %>
 <%= tdf[:abstract] %>
 <%= tdf[:description] %>
