sightseeing: spellcheck, link, announce

--- a/content/practical/sightseeing.html
+++ b/content/practical/sightseeing.html
@@ -103,12 +103,25 @@ aliases: /sightseeing
 
 <p>
    <b>Saturday:</b>
-   A tramride to the centre of Brussels followed by a guided tour in the touristical city centre, not only looking at the touristical highlights, such as de Grote Markt, Manneke Pis, the Sint-Hubertusgalerijen etc..., but moreover explaining how the city of Brussels markets the city centre as 'medieval' and does everything not to shock the tourist with modern buildings. This results in a series of new buildings with old fashioned facades. During the tour, the guide will try to let you look through the facade and show you the modern city.
+   A tram ride to the centre of Brussels followed by a guided tour in the
+   historic city centre, not only looking at the highlights, such as the Grote
+   Markt, Manneken Pis, the Sint-Hubertusgalerijen etc..., but moreover
+   explaining how the city of Brussels markets the city centre as ‘mediaeval’ and
+   does everything not to shock the tourist with modern buildings.  This results
+   in a series of new buildings with old fashioned façades. During the tour, the
+   guide will try to let you look through the façades and show you the modern city.
 </p>
 
 <p>
   <b>Sunday:</b>
-  A walk in the neighbourhood of the Fosdem-congress, Ter Kameren, the ponds and Flagey, with time for a coffee break Tour Description: A stone's throw from the ULB campus lies the Place Flagey. This lively square, with the Flagey building in Art Deco on the edge, has had a revival since its redesign. People come from all over the city to watch and be watched from the terrace of Café Belga . The road to it is very nice too, along Cambre Abbey, with the idyllic sources of Maelbeek, along the Ixelles ponds, surrounded by beautiful villas and the streets around the Place Flagey, still marked by the Portuguese migration
+  A walk in the neighbourhood of FOSDEM, Ter Kameren, the ponds and Flagey, with
+  time for a coffee break.  A stone's throw from the ULB campus
+  lies the Place Flagey.  This lively square, with the Flagey building in Art
+  Deco on the edge, has had a revival since its redesign. People come from all
+  over the city to watch and be watched from the terrace of Café Belga.  The
+  road to it is very nice too, along Cambre Abbey, with the idyllic sources of
+  Maelbeek, along the Ixelles ponds, surrounded by beautiful villas and the
+  streets around the Place Flagey, still marked by the Portuguese migration
 </p>
 
 <p>
