fix the doodle for the PythonFOSDEM 2015

--- a/content/schedule/devrooms/python.html
+++ b/content/schedule/devrooms/python.html
@@ -13,5 +13,5 @@
 
 <p>
   A Python drink is planned Saturday 1st February, for more details see
-  <a href="http://doodle.com/mn3yck6n3xxidsim">here</a>.
+  <a href="http://doodle.com/ngdeesgbr6dcx3f5">here</a>.
 </p>
