stands: add accepted stands for 2015

--- a/content/stands.html
+++ b/content/stands.html
@@ -2,10 +2,64 @@
 # vim: set ts=2 sw=2 et ai ft=eruby:
 title: Stands
 stands:
-  K [level 1] (20):
-  K [level 2] (16):
+  K [level 1] (21):
+   - CentOS: http://www.centos.org
+   - Debian: http://www.debian.org/
+   - Diaspora: https://diasporafoundation.org/
+   - Enlightenment: http://www.enlightenment.org
+   - FSFE: http://fsfe.org/
+   - Fedora: http://www.fedoraproject.org
+   - GNOME: http://gnome.org
+   - Hack the Knit: http://www.constantvzw.org/
+   - KDE: http://www.kde.org
+   - Libre Graphics magazine: http://libregraphicsmag.com
+   - Mageia: http://mageia.org
+   - Mozilla: http://www.mozilla.org/
+   - OpenMandriva: http://openmandriva.org
+   - OpenStack: http://openstack.org
+   - OwnCloud: http://owncloud.org/
+   - openSUSE: http://www.opensuse.org
+   - oVirt: http://ovirt.org
+   - Puppet: http://puppetlabs.com/
+   - Tor Project: https://torproject.org/
+   - Wikimedia: https://www.mediawiki.org/wiki/MediaWiki
+   - Xen: http://xenproject.org/
+
+  K [level 2] (19):
+   - Agora Voting: http://agoravoting.org/
+   - Apache OpenOffice: http://openoffice.org
+   - DoudouLinux: http://www.doudoulinux.org/
+   - Eclipse: http://eclipse.org
+   - ElasticSearch: http://elasticsearch.org
+   - GsoC: http://google-melange.com
+   - Illumos: http://www.illumos.org/
+   - Jabber: http://jabber.org/
+   - Jenkins: https://jenkins-ci.org
+   - Jitsi: https://jitsi.org
+   - Kolab, MyKolab, Roundcube: http://mykolab.com
+   - LibreOffice: http://www.libreoffice.org
+   - Matrix: http://matrix.org/
+   - MySQL Community: http://www.mysql.com/
+   - NixOS: http://nixos.org/
+   - OpenUI5: http://openui5.org/
+   - Perl Programming Language community: http://www.perl.org/
+   - Python: http://python.org/
+   - XMMP: http://xmpp.org/
   AW (9):
+   - CAcert and secure-u: http://cacert.org
+   - CoreBoot + Flashrom: http://www.coreboot.org/
+   - DIYBookScanner: https://github.com/DIYBookScanner/spreads
+   - GNURadio: http://gnuradio.org/
+   - OpenEmbedded: http://www.openembedded.org
+   - PicoTCP: http://www.picotcp.com/
+   - PostgreSQL: http://www.postgresql.org/
+   - ReactOS: http://www.reactos.org/
+   - WolfSSL: http://wolfssl.com/yaSSL/Home.html
+   - XBMC: http://xbmc.org/
   H (3):
+   - O'Reilly Media: http://www.oreilly.com/
+   - Job corner
+   - Announcements corner
 ---
 <%
   # parse stands meta
