transportation: bus 71 makes a detour this year

--- a/content/practical/transportation.html
+++ b/content/practical/transportation.html
@@ -62,6 +62,7 @@ sponsors_under_navigation: true
 <dd><ul>
 <li><strong>Direction: </strong>From <strong>De Brouck&egrave;re</strong> in central Brussels towards <strong>Delta</strong></li>
 <li><strong>Stop: </strong>ULB</li>
+<li><strong>Remark: </strong>Due to roadworks, bus 71 will make a detour and skip the stop "ULB". Use the stops "Buyl" or "Cimmetière d'Ixelles", which are a 5 minute walk from the campus.</li>
 </ul></dd>
 
 <dt><strong>
@@ -99,6 +100,7 @@ All of them stop at "ULB".<br/>
 <ul style="margin-top:0">
 <li>Take <a href="http://www.stib.be/horaires-dienstregeling2.html?l=en&amp;moduscode=B&amp;linecode=71">Bus 71</a>, direction Delta</li>
 <li>Get off at stop <u>ULB</u>.</li>
+<li><strong>Remark: </strong>Due to roadworks, bus 71 will make a detour and skip the stop "ULB". Use the stops "Buyl" or "Cimmetière d'Ixelles", which are a 5 minute walk from the campus.</li>
 </ul></p>
 <br />
 <p>From <strong>Brussels North</strong> ("<strong>Bruxelles Nord</strong>" or "<strong>Gare du Nord</strong>") station (about <strong>30 minutes</strong>):
