practical: tidy up practical information

--- a/content/practical/index.html
+++ b/content/practical/index.html
@@ -2,8 +2,56 @@
 title: Practical information
 navcat: true
 ---
-<h3>Before the event</h3>
-<ul>
-    <li><%= l('/practical/accommodation/') %></li>
-    <li><%= l('/practical/transportation/') %></li>
-</ul>
+
+<a name="registration"></a>
+<h3>Registration and cost</h3>
+<p>
+  FOSDEM is free to attend.  There is no registration.  Just turn up!
+  <br/>
+  The conference is primarily funded by <a
+  href="page:about/sponsors">sponsors</a> and the sale of t-shirts on-site but
+  we also gratefully accept <a href="page:support/donate">donations</a>.
+</p>
+
+<a name="venue"></a>
+<h3>Getting there</h3>
+<p>
+  FOSDEM takes place at the ULB Solbosch Campus in Brussels, Belgium.
+  Information about the venue and how to get there can be found on the <a
+  href="page:practical/transportation">transportation & venue page</a>.
+</p>
+
+<a name="accommodation"></a>
+<h3>Where to stay</h3>
+<p>
+  We can't recommend particular hotels or hostels in Brussels and we can't
+  arrange your accommodation for you, but we have compiled <a
+  href="page:practical/accommodation">a list of popular places to stay</a>,
+  recommended by other attendees.
+</p>
+
+<a name="accessibility"></a>
+<h3>Accessibility</h3>
+<p>
+  We don't own the university campus and have little control over its
+  accessibility.
+  Nevertheless, most of the conference is accessible to attendees with physical
+  limitations.
+  Consult our <a href="page:practical/accessibility">accessibility page</a> for
+  details on how to get around campus in a wheelchair and how to get accessible
+  seating in presentations.
+</p>
+
+<a name="other"></a>
+<h3>Further information</h3>
+<p>
+  The <a href="https://lists.fosdem.org/mailman/listinfo/fosdem">fosdem@ mailing
+  list</a> is a good place to ask for more information.
+  Subscribers to the list may also be able to help you with getting to the venue
+  or finding a place to stay.
+  The <a href="https://lists.fosdem.org/pipermail/fosdem/">list archive</a>,
+  going back to 2006, contains a wealth of useful information.
+</p>
+<p>
+  Of course you can also <a href="page:contact">contact the organisers</a>!
+</p>
