index: note deadlines have passed

--- a/content/index.html
+++ b/content/index.html
@@ -47,13 +47,10 @@ maxnews = @config.fetch(:news).fetch(:items_on_index_page).to_i
         and Sunday 1 February 2015.
       </p>
       <p>
-        We are still inviting proposals for
-	<a href="<%= pathof '/news/2014-09-30-accepted-devrooms/' %>">presentations in developer rooms</a>.
-      </p>
-      <p>
-      The deadlines for other proposals have passed.<br/>
+      All deadlines for submitting proposals have passed.<br/>
       Schedules will be announced in the coming days and weeks.
       </p>
+      <p>We look forward to seeing everyone soon!</p>
     </div>
   </div>
 
