stands: fix AW building

--- a/content/stands.html
+++ b/content/stands.html
@@ -45,15 +45,17 @@ stands:
    - Perl Programming Language community: http://www.perl.org/
    - Python: http://python.org/
    - XMMP: http://xmpp.org/
-  AW (9):
-   - CAcert and secure-u: http://cacert.org
+  AW (12):
+   - CAcert: http://cacert.org
    - CoreBoot + Flashrom: http://www.coreboot.org/
+   - CoreOS: https://coreos.com/
    - DIYBookScanner: https://github.com/DIYBookScanner/spreads
    - GNURadio: http://gnuradio.org/
    - OpenEmbedded: http://www.openembedded.org
    - PicoTCP: http://www.picotcp.com/
    - PostgreSQL: http://www.postgresql.org/
    - ReactOS: http://www.reactos.org/
+   - Ultimaker: http://www.ultimaker.com/
    - WolfSSL: http://wolfssl.com/yaSSL/Home.html
    - XBMC: http://xbmc.org/
   H (3):
