accommodation: fix CouchSurfing link

--- a/content/practical/accommodation.html
+++ b/content/practical/accommodation.html
@@ -44,7 +44,7 @@ places to stay.</p>
 
 <h2>CouchSurfing / BeWelcome</h2>
 <p>Are you looking for a couch or do you maybe have one to offer?
-Join the FOSDEM <a target="_new" href="http://www.couchsurfing.com/group.html?gid=16380">CouchSurfing</a>
+Join the FOSDEM <a target="_new" href="https://www.couchsurfing.com/groups/16380">CouchSurfing</a>
 or <a target="_new" href="http://www.bewelcome.org/groups/524">BeWelcome</a> group and find fellow visitors!</p>
 
 <% $item_by_id.fetch('/hotels/')[:hotels].each do |section, hotels| %>
